Require a recent jwst version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ python = ">=3.11"
 astropy = "*"
 astroquery = "*"
 jdaviz = "*"
-jwst = "*"
+jwst = ">=1.15.0"
 matplotlib = "*"
 photutils = "*"
 regions = "*"
