--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Various astronomy tools for my papers"
 authors = [{ name = "Dries Van De Putte", email = "dvandepu@uwo.ca" }]
 requires-python = ">=3.11"
 readme = "README.md"
-license = "LICENSE"
+# license = "LICENSE"
 dependencies = [
     "astropy",
     "astroquery",
